--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             ],
             "Emotional Health🟢": [
                 "Write down three things you'd want to do this year with me, virtually or not.",
-                "Call up any friend you wish to, and reconnect.",
+                "Call me up and ask me to tell you about any three things I love about your body or your being.",
                 "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together."
             ],
             "Mental Health🟢": [
@@ -508,7 +508,7 @@
                 "Focus on regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
             ],
             "Skills🟢🟠": [
-                "Pester me to get you a course on Unacademy.",
+                "Write me a 500-word essay on an introduction of yourself.",
                 "Schedule an interview with me, either one where you remain clothed throughout, or one where you start out clothed and keep losing garments for every mistake you make.",
                 "Enroll yourself in a MicroMasters course or its equivalent, after suitably consulting me."
             ],
