--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
             ],
             "Physical Display🔴": [
                 "Present yourself to me in the most natural of your poses: fully nude, kneeling with your hair down, spectacles off, eyes lowered and hands clasped behind you. You may choose to do as much in a photo, video, or on a video call.",
-                "Present yourself to me with your bra in your mouth, wearing nothing at all, feet close together and hands behind you, hair down.",
-                "Present your ass to me by perfecting the arch over a video call."
+                "Present yourself to me with your bra in your mouth, wearing nothing at all, feet close together and hands behind you, hair down. You must be standing upright and fully on display for me.",
+                "Present your ass to me by perfectly displaying your curves, in a photo, video, or on a video call."
             ],
             "Verbal Gratitude🟠🔴": [
                 "Send me a voice message clearly expressing your gratitude at being my submissive. You may choose how long or short it is.",
