--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
         ];
         const DRIVE_OPTIONS = {
             level1: [
-                "Passive Tasks?🟢🟠",
+                "Passive Tasks?🟢🟠🔴",
                 "A sexy video?🟠🔴",
                 "A hot picture?🔴"
             ],
             level2: {
-                "Passive Tasks?🟢🟠": [
-                    "Clothing-related🟠",
+                "Passive Tasks?🟢🟠🔴": [
+                    "Clothing-related🟠🔴",
                     "Mind-related🟢",
                     "Other Passive Tasks🟠"
                 ],
@@ -398,40 +398,47 @@
                 ]
             },
             level3: {
-                "Clothing-related🟠": [
+                "Clothing-related🟠🔴": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free",
-                    "For any two consecutive days of the week, I am going to be sending you videos of me changing any garment: whether it's wearing socks, putting on a towel, taking off a bra, or any other garment added to or subtracted from my body."
+                    "For any two consecutive days of the week, I am going to be sending you videos of me changing any garment: whether it's wearing socks, putting on a towel, taking off a bra, or any other garment added to or subtracted from my body.",
+                    "I am going to be showing off my wet, hot self to you three days this week by toweling down after my shower for you on camera live, or in a video. I shall end the video by either wrapping myself in said towel, or entirely nude for your delight."
                 ],
                 "Mind-related🟢": [
                     "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
                     "I know I look hot with my hair down. I will send you at least three separate videos throughout the week showing you that I am studying with my hair down.",
-                    "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too."
+                    "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too.",
+                    "Every night before going to bed, I am going to call you up and ask you to baby me. And then, you're going to baby me!"
                 ],
                 "Other Passive Tasks🟠": [
                     "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week, right here on this webpage.",
                     "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
-                    "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week."
+                    "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week.",
+                    "I am going to stay shaved throughout this week: absolutely hairless from below my neck. Any active tasks during this week will happily bear proof of the same. :)"
                 ],
                 "Starting Clothed🟠": [
                     "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
                     "I will start out standing, wearing only a vest and panties, and then lower my vest to my stomach to present my breasts to you, all the while smiling at you.",
-                    "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down."
+                    "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down.",
+                    "Let me start out wearing my black vest and my dark panties. I'll turn around, take the vest off and lower my panties to my thighs; and then I'll turn back around to face you, bashful and pretty as I always am in these videos."
                 ],
                 "Starting Nude🔴": [
                     "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
                     "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in front of you. I'll stand back up and then give you a little twirl so you can appreciate every inch of me.",
-                    "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
+                    "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each.",
+                    "Starting off nude and kneeling up, I'll place my hands behind my head and jut my beautiful tits out for you. Then, I am going to kneel down and sit on my heels, and slowly widen my thighs for you to have a visual taste of what I have waiting for you. "
                 ],
                 "Special Submission🔴": [
                     "I will get topless for you, and send you a top-half-only video of me putting on eyeliner, because I know it makes me look prettier still, and you love it so.",
                     "I'll start out in my black bra and dark panties, my hair tied up. I will begin by turning around, letting my hair and panties down, and taking my bra off. I'll turn back around after five seconds, and push my hair to my front, hands clasped in front in submission.",
-                    "I'll get fully naked for you, and then start the video with my hands behind me and hair down, spectacles on. I'll then affirm my submission to you by saying as much, and assure you of my obedience to do anything you say."
+                    "I'll get fully naked for you, and then start the video with my hands behind me and hair down, spectacles on. I'll then affirm my submission to you by saying as much, and assure you of my obedience to do anything you say.",
+                    "I am going to position the camera in a way that I can be in the frame lying nude on my back on any surface: floor, or bed. I have leeway to do what I wish with the rest of my body to look like my hottest self for you, but my hands rest on my eyes, shutting them out, and my lips form a naughty grin."
                 ],
                 "Object-interaction🔴": [
                     "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me and draped over the back of the chair, my legs wide apart for you to savour what's in between.",
                     "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
-                    "I'll take a photo of me lying nude on the bed, the camera placed just above my breasts and pointing at my feet. I am going to give you a a clear view of how your baby looks naked, from right between my boobs, all the way down to my pussy and legs."
+                    "I'll take a photo of me lying nude on the bed, the camera placed just above my breasts and pointing at my feet. I am going to give you a a clear view of how your baby looks naked, from right between my boobs, all the way down to my pussy and legs.",
+                    "This is a special kneeling picture for you: I shall kneel naked, but wrapped in a bedsheet. The bedsheet curls around my arms and leaves enough of my breasts bare, but nothing below the stomach, with a slight glimpse of my delicious legs anywhere I wish."
                 ],
                 "Accessories🔴": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
