--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
                 "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
             ],
             "Studies🟢": [
-                "Cover everything on Rational Expectations, Real Business Cycles, and Keynesian Economics topic-wise from the portal. This is a recurring task till I conclude that you need not study it any more.",
-                "Solve the PYQs for SAU, HCU, MSE, and ISI PEA, all that is left for you. This is a recurring task till I conclude that you need not study it any more.",
-                "Focus on regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
+                "Keep up with your Finance Course from IISER Pune. This is a recurring task till I conclude that you need not study it any more.",
+                "Explain the causes, effects, and results of the Great Recession to me on a phone call.",
+                "Keep revising regression analysis, statistical inference and testing of hypotheses, and distributions. This is a recurring task till I conclude that you need not study it any more."
             ],
             "Skills🟢🟠": [
                 "Write me a 500-word essay on an introduction of yourself.",
