--- a/index.html
+++ b/index.html
@@ -443,30 +443,35 @@
                 "Accessories🔴": [
                     "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
                     "I think I'll put on the longest socks I can find, along with any cap I may have, and wear nothing else as I send you a mirror selfie, the phone just covering my face, the other hand behind me. If I cannot find the cap, you may have to make do with just the rest.",
-                    "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other."
+                    "I'll put on any earrings I can find, turn my head slightly to show them to you, while clicking a mirror selfie wearing nothing but my panties, pulled down to my thighs, legs close together and one foot slightly in front of the other.",
+                    "I'll go out and buy stickers: the small, cutesy ones available at most stationery shops. Then, I am going to send you a nude front profile, standing upright and hands clasped behind me, with my breasts covered in at least ten stickers, but my pussy untouched and uncovered."
                 ],
                 "Special Submissive🔴": [
                     "Maybe I'll take a simple nude of me kneeling with my hair in a single braid and in front of me, my eyes lowered, a playful smile on my lips, my hands behind me even as i thrust my chest out for you?",
                     "I'll place a palm under each boob of mine, pushing them up with index finger and thumb and presenting them to you as they should be, while standing nude, legs close together, one foot slightly in front of the other.",
-                    "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you."
+                    "I can use a handkerchief as a kind of gag over my mouth, wearing nothing but my bra as I kneel for you, hands behind me, hair down, spectacles off? I'll make sure that one strap of the bra is lowered to my shoulder, ensuring enough of my breast is on teasing display for you.",
+                    "I shall stay nude on a video call with you whenever I am free, and refer to you only as 'sir' throughout the call. If I fail to uphold my sincerity in the call, you're free to ask me to do anything you wish right there on the call."
                 ]
             }
         };
         const PLAY_OPTIONS = {
     "Mind-games🟢🟠": [
-        "Get me to play Anything Can Be Used to Pick You Up. ",
-        "Schedule a game of Chess with me sometime today. ",
-        "Play Seven Questions with me to decide how you wish to offer a look at your body to me today. "
+        "I want to play Anything Can Be Used to Pick You Up with you. ",
+        "Please schedule a game of Chess with me sometime today. ",
+        "Play Seven Questions with me to decide how you wish to look at my body today. ",
+        "Can I ask you to please turn me on, entirely on text? I love it when you play with me on text!"
     ],
     "Remote Games 🟢🟠": [
-        "Ask ChatGPT, 'What can I do to please my long-distance dominant boyfriend?', take a screenshot of the results to show them to me, and do the top two things suggested. ",
-        "Play Adult Truth or Dare with me on any app you choose. ",
-        "Schedule a 1v1 online game with me today. "
+        "I will ask ChatGPT, 'What can I do to please my long-distance dominant boyfriend?', take a screenshot of the results to show them to you, and do the top two things suggested. ",
+        "I will take time out to play Adult Truth or Dare with you on any app you choose. ",
+        "Can we play some other online 1v1 game today?",
+        "I will carry out some research to find the best free or cheap adult games on Google Play Store, and then get you to play it with me."
     ],
     "Games for a good Submissive 🔴": [
-        "The moment you're free to get naked for me, ask me directly for a command, and immediately do as I say. ",
-        "Tease me while I am at work some day. Resort to texts, photos, videos, voice messages: anything you wish. ",
-        "Play a game of endurance with me on video call, and take up the challenge to do what I say, for as long as I say. " 
+        "The moment I am free to get naked for you, I will ask you directly for a command, and immediately do as you say. ",
+        "I shall try to tease you while you are at work tomorrow by resorting to texts, photos, videos, or voice messages. ",
+        "I would like to try and play a game of endurance with you on video call, and take up the challenge to do what you say, for as long as you say. ",
+        "I'll get naked, put a blindfold on, and video call you, while assuming my standard kneeling-hands-behind position. I trust that you'll take the video call in surroundings which do not expose me. On the call, I am all yours to play with, of course." 
     ]
 };
         // Growth tab uses the same structure as Drive for a flat, clickable UI
