--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         "I shall try to tease you while you are at work tomorrow by resorting to texts, photos, videos, or voice messages. ",
         "I would like to try and play a game of endurance with you on video call, and take up the challenge to do what you say, for as long as you say. ",
         "I'll get naked, put a blindfold on, and video call you, while assuming my standard kneeling-hands-behind position. I trust that you'll take the video call in surroundings which do not expose me. On the call, I am all yours to play with, of course." 
-    ]
+    ]c
 };
         // Growth tab uses the same structure as Drive for a flat, clickable UI
         const GROWTH_OPTIONS = JSON.parse(JSON.stringify(DRIVE_OPTIONS));
@@ -502,17 +502,20 @@
             "Physical Health🟢": [
                 "I am going to send you four videos of me drinking a full glass of water today.",
                 "Let's work on my body from today. I am going to ask you about how to to ease into general exercise.",
-                "I think I will work on toning my abdominal region. I'll put you on a vc and do 2x10 ab crunches today!"
+                "I think I will work on toning my abdominal region. I'll put you on a vc and do 2x10 ab crunches today!",
+                "Today I will do a 30-seconds plank, for you, on video call."
             ],
             "Emotional Health🟢": [
-                "Write down three things you'd want to do this year with me, virtually or not.",
+                "Write down three things you'd want to do this year with me, virtually or not, and show them to me.",
                 "Call me up and ask me to tell you about any three things I love about your body or your being.",
-                "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together."
+                "Tell me about your top three non-sexual fantasies with me, to be fulfilled once we start living together.",
+                "Ask me to write you a fantasy scenario of us in any setting."
             ],
             "Mental Health🟢": [
                 "Write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' Send me a photo of the paper.",
                 "Call me up and compliment yourself on something that you did in the recent past that you're really proud of for having done.",
-                "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
+                "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'",
+                "Go to bed today"
             ],
             "Studies🟢": [
                 "Keep up with your Finance Course from IISER Pune. This is a recurring task till I conclude that you need not study it any more.",
