--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                 "Write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' Send me a photo of the paper.",
                 "Call me up and compliment yourself on something that you did in the recent past that you're really proud of for having done.",
                 "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'",
-                "Go to bed today"
+                "Go to bed today by calling me up and wishing me good night."
             ],
             "Studies🟢": [
                 "Keep up with your Finance Course from IISER Pune. This is a recurring task till I conclude that you need not study it any more.",
