--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 "I am going to send you four videos of me drinking a full glass of water today.",
                 "Let's work on my body from today. I am going to ask you about how to to ease into general exercise.",
                 "I think I will work on toning my abdominal region. I'll put you on a vc and do 2x10 ab crunches today!",
-                "Today I will do a 30-seconds plank, for you, on video call."
+                "A 30-seconds plank, for you, on video call today."
             ],
             "Emotional Health🟢": [
                 "Write down three things you'd want to do this year with me, virtually or not, and show them to me.",
@@ -514,8 +514,7 @@
             "Mental Health🟢": [
                 "Write this on a paper: 'There are always going to be people better and worse than me, and that is okay. I am content.' Send me a photo of the paper.",
                 "Call me up and compliment yourself on something that you did in the recent past that you're really proud of for having done.",
-                "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'",
-                "Go to bed today by calling me up and wishing me good night."
+                "Wake up tomorrow morning, call me, and tell me, 'I am confident that this is going to be a good day for me. I love you.'"
             ],
             "Studies🟢": [
                 "Keep up with your Finance Course from IISER Pune. This is a recurring task till I conclude that you need not study it any more.",
