--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             "Capabilities🟢🟠": [
                 "Do a hundred jumping jacks for better breathing and lung capacity, while keeping me on video call. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked.",
                 "Write a 500-word essay on how you picture a day in your life at college during Masters, by hand in a copy, and make me a PDF of it.",
-                "Perform 10 time-controlled squats with me on video call. I shall do the controlling of the time. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked"
+                "Perform 10 time-controlled squats with me on video call. I shall do the controlling of the time. You may or may not be naked, depending on whether you're free and whether or not I want you to be naked."
             ],
             "Physical Display🔴": [
                 "Present yourself to me in the most natural of your poses: fully nude, kneeling with your hair down, spectacles off, eyes lowered and hands clasped behind you. You may choose to do as much in a photo, video, or on a video call.",
